--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,8 @@
 
 body {
     font-family: "Poppins", sans-serif;
-    /* width: 100vw; */
-    /* height: 100vh; */
+        /* width: 100vw;
+        height: 100vh; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -28,33 +28,54 @@ body {
 }
 
 .input-container {
-    margin: 20px;
+    margin-bottom: 20px;
 }
 
 label {
     display: block;
-    font-size: 20px;
-    margin-bottom: 5px;
+    font-size: 18px;
 }
 
 .btn {
-    margin: 20px;
     border: none;
     padding: 10px 20px;
     color: #fff;
-    background-color: #015497;
     font-size: 20px;
     cursor: pointer;
     border-radius: 8px;
 }
 
+.btn-cal {
+    background-color: #015497;
+    margin-right: 10px;
+}
+
+.btn-clear {
+    background-color: #bd0000;
+}
+.btn-cal:hover {
+    background-color: #015497b6;
+}
+
+.btn-clear:hover {
+    background-color: #bd0000ad;
+}
+
 .results {
-    margin: 20px;
+    margin-top: 10px;
+    padding: 5px 10px;
+    border: 1px solid #015497;
+}
+
+.results p:nth-child(1) {
+    font-weight: 500;
+    color: #015497;
 }
 
 .results p {
     font-size: 18px;
 }
+
 input {
     border: 1px solid #ccc;
     height: 20px;
@@ -62,7 +83,13 @@ input {
     width: 100%;
     border-radius: 5px;
 }
+
 input:focus {
     border: 2px solid #015497;
     outline: none;
+}
+
+.error {
+    color: red;
+    font-size: 14px;
 }
